--- a/services/metrics/requirements.txt
+++ b/services/metrics/requirements.txt
@@ -3,3 +3,11 @@ pydantic==2.5.2
 sqlalchemy==2.0.23
 uvicorn==0.24.0
 psycopg[binary]==3.1.13
+numpy==1.24.3
+pandas==2.0.3
+scipy==1.11.1
+matplotlib==3.7.2
+seaborn==0.12.2
+jinja2==3.1.2
+elasticsearch==8.11.0
+requests==2.31.0
