--- a/services/indexer/Dockerfile
+++ b/services/indexer/Dockerfile
@@ -12,9 +12,8 @@ RUN apt-get update && apt-get install -y \
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the indexer scripts
-COPY framework_indexer.py .
-COPY elasticsearch-indexer.py .
+# Copy the unified indexer script
+COPY unified_indexer.py .
 
 # Create non-root user
 RUN useradd -m -u 1001 indexer && chown -R indexer:indexer /app
@@ -24,5 +23,5 @@ USER indexer
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
   CMD curl -f http://elasticsearch:9200/_cluster/health || exit 1
 
-# Run the framework indexer by default
-CMD ["python", "framework_indexer.py"]
+# Run the unified indexer by default
+CMD ["python", "unified_indexer.py"]
